# icicle

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  meson.build  meson_options.txt
build-aux/: convertyml.sh
config/: README.md  advanced.yml.in  basic.yml.in  config.yml  flatpak.yml.in  meson.build
config/advanced/: configuration.nix  flake.nix
config/advanced/systems/ARCH/HOSTNAME/: default.nix  modules.nix
config/basic/: configuration.nix  flake.nix  snowflake.nix
config/basic/modules/gnome/: config.nix  default.nix
config/basic/modules/keyboard/: config.nix  default.nix
config/basic/modules/localetime/: config.nix  default.nix
config/basic/modules/networking/: config.nix  default.nix
config/basic/modules/snowflakeos/: config.nix  default.nix
config/basic/modules/systempackages/: config.nix  default.nix
config/basic/modules/users/: config.nix  default.nix
config/basic/systems/ARCH/HOSTNAME/: default.nix  modules.nix
config/branding/snowflakeos/: meson.build  slides.yml.in
config/flatpak/: flake.nix
config/flatpak/systems/ARCH/HOSTNAME/: default.nix  modules.nix
config/icicle/: advanced.yml.in  basic.yml.in  config.yml  meson.build
config/icicle/advanced/: configuration.nix
convertyml/: default.nix
data/: org.snowflakeos.Icicle.desktop.in.in  org.snowflakeos.Icicle.gschema.xml.in  org.snowflakeos.Icicle.metainfo.xml.in.in  org.snowflakeos.Icicle.policy.in.in
data/resources/: resources.gresource.xml
icicle-helper/: Cargo.toml
icicle-helper/src/: main.rs  meson.build
modules/nixos/icicle/: default.nix
outtest/etc/icicle/: advanced.yml  basic.yml
outtest/etc/icicle/branding/snowflakeos/: slides.yml
outtest/share/applications/: org.snowflakeos.Icicle.desktop
outtest/share/glib-2.0/schemas/: gschemas.compiled  org.snowflakeos.Icicle.gschema.xml
outtest/share/icons/hicolor/: icon-theme.cache
outtest/share/locale/es/LC_MESSAGES/: icicle.mo
outtest/share/metainfo/: org.snowflakeos.Icicle.metainfo.xml
outtest/share/polkit-1/actions/: org.snowflakeos.Icicle.policy
po/: LINGUAS  POTFILES.in  ar.po  de.po  es.po  fr.po  got.po  icicle.pot  id.po  it.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  ta.po  tr.po  uk.po  zh_CN.po
shells/icicle/: default.nix
src/: config.rs.in  lib.rs  main.rs  meson.build
src/ui/: mod.rs  quitdialog.rs  window.rs
src/ui/pages/: base.rs  error.rs  install.rs  keyboard.rs  list.rs  mod.rs  partitions.rs  summary.rs  timezone.rs  user.rs  welcome.rs
src/utils/: i18n.rs  install.rs  language.rs  mod.rs  parse.rs
