[package]
name = "icicle"
version = "0.0.1"
edition = "2021"
default-run = "icicle"

[dependencies]
relm4 = { version = "0.7.0-beta.1", features = ["libadwaita", "macros"]  }
relm4-components = { package = "relm4-components", version = "0.7.0-beta.1"}
adw = { package = "libadwaita", version = "0.5", features = ["v1_2", "gtk_v4_6"] }
gtk = { package = "gtk4", version = "0.7", features = ["v4_6"] }
glib = { package = "glib", version = "0.18", features = ["v2_68"] }
tokio = { version = "1.32", features = ["full"] }
tracker = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

log = "0.4"
simplelog = "0.12"

anyhow = "1.0"

isolang = "2.3.0"
gnome-desktop = { git = "https://gitlab.gnome.org/vlinkz/gnome-desktop-rs" }
libgweather = "4.3"

size = "0.4"

vte = { package = "vte4", git = "https://gitlab.gnome.org/vlinkz/vte4-rs", branch = "0.7" }

distinst-disks = { git = "https://github.com/pop-os/distinst/" }

reqwest = { version = "0.11", features = ["blocking"] }

gettext-rs = { version = "0.7", features = ["gettext-system"] }
regex = "1.9"

[workspace]
members = [".", "icicle-helper"]
default-members = [".", "icicle-helper"]
